crates/squealy/tests/compile_fail/distinct_order_by_unselected_column_rejected.stderr
error[E0277]: `SELECT DISTINCT` requires every `ORDER BY` key to also be in the projection
  --> tests/compile_fail/distinct_order_by_unselected_column_rejected.rs:18:10
   |
18 |         .select(|(user,)| user.name);
   |          ^^^^^^ the trait `squealy::Contains<UserId, _>` is not implemented for `HNil`
   |
   = note: add the ordering column(s) to the projection, or drop `.distinct()`
help: the following other types implement trait `squealy::Contains<T, Index>`
  --> $WORKSPACE/crates/squealy-core/src/list.rs
   |
   |   impl<T, Tail> Contains<T, Here> for HCons<T, Tail> {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<T, Tail>` implements `squealy::Contains<T, squealy::Here>`
...
   |   impl<T, Tail> Contains<T, Here> for HCons<crate::Nullable<T>, Tail> {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<Nullable<T>, Tail>` implements `squealy::Contains<T, squealy::Here>`
   |
   | / impl<T, Head, Tail, Index> Contains<T, There<Index>> for HCons<Head, Tail> where
   | |     Tail: Contains<T, Index>
   | |____________________________^ `HCons<Head, Tail>` implements `squealy::Contains<T, squealy::There<Index>>`
   = note: required for `HCons<UserName, HNil>` to implement `squealy::Contains<UserId, squealy::There<_>>`
   = note: required for `HCons<UserId, HNil>` to implement `squealy::OrderKeysInProjection<UserName, HCons<squealy::There<_>, HNil>>`
   = note: required for `IsDistinct` to implement `squealy::DistinctOrderGate<HCons<UserId, HNil>, UserName, HCons<squealy::There<_>, HNil>>`
note: required by a bound in `squealy::SourceQuery::select`
  --> $WORKSPACE/crates/squealy-core/src/query.rs
   |
   |       fn select<P, Indices>(
   |          ------ required by a bound in this associated function
...
   |           <Self as SelectAst<'conn, 'scope, Conn>>::Distinctness: crate::DistinctOrderGate<
   |  _________________________________________________________________^
   | |             <Self as SelectAst<'conn, 'scope, Conn>>::OrderKeys,
   | |             <P as ReturningProjection<'scope>>::Shape,
   | |             Indices,
   | |         >,
   | |_________^ required by this bound in `SourceQuery::select`
